--- a/embedded.html
+++ b/embedded.html
@@ -1,10 +1,10 @@
 <head>
-    <script src="/scripts/example.js"></script>
+    <script src="./framework.js"></script>
     <link type="text/css" rel="stylesheet" href="/css/example.css">
 </head>
 <body>
     <div class="softphone">
-        <iframe id="softphone" allow="camera *; microphone *" src="https://apps.mypurecloud.com/crm/index.html?crm=framework-local-secure"></iframe>
+        <iframe id="softphone" src="https://apps.mypurecloud.de/crm/embeddableFramework.html" allow="clipboard-read; clipboard-write; microphone; camera"></iframe>
     </div>
 
     <div class='content'>
