--- a/embedded.html
+++ b/embedded.html
@@ -3,8 +3,8 @@
     <link type="text/css" rel="stylesheet" href="/css/example.css">
 </head>
 <body>
-    <div class="softphone">
-        <iframe id="softphone" src="https://apps.mypurecloud.de/crm/embeddableFramework.html" allow="clipboard-read; clipboard-write; microphone; camera"></iframe>
+    <div class="softphone" style="height:100vh; margin:0; padding:0;">
+        <iframe id="softphone" src="https://apps.mypurecloud.de/crm/embeddableFramework.html" allow="clipboard-read; clipboard-write; microphone; camera" style="width:100%; height:100%; border:0; display:block;"></iframe>
     </div>
 
     <div class='content'>
