--- a/embedded.html
+++ b/embedded.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class='content'>
-        <h1>PureCloud Embeddable Framework Example</h1>
+        <h1>Widget de Prueba</h1>
 
         <div class="actions">
             <h3>Actions</h3>
