--- a/embedded.html
+++ b/embedded.html
@@ -50,7 +50,7 @@
             <div class="action">
                 <h4 class="actionName">Contact Search Options <span id="searchText"></span></h4>
                 <p>contactSearch allows you to define which contacts the integration returns from an external CRM when agents search for names or phone numbers before making calls or transferring interactions.</p>
-                <textarea id="contactSearchPayload" rows="3">[{type: "external",name: "Wilfredo", phone: [{number: "+34678678678", label: "Móvil"}]},{type: "external",name: "Adrian", phone: [{number: "+34657657657", label: "Oficina"}]},{type: "external",name: "Manero", phone: [{number: "+34675675675", label: "Central"}]}]</textarea>
+                <textarea id="contactSearchPayload">[{"type": "external", "name": "Wilfredo", "phone":[{ "number":"604804440", "label":"Cell"}]}]</textarea>
             </div>
             
             <div class="action">
