--- a/embedded.html
+++ b/embedded.html
@@ -36,7 +36,7 @@
             <div class="action">
                 <h4 class="actionName">Add Custom Attributes</h4>
                 <p>Interaction.addCustomAttributes allows you to add additional information to interactions and sync these attributes to call logs associated with these interactions. An example use case is to save the current state of an agent's workspace and transfer the workspace to a new agent.</p>
-                <textarea id="attributePayload" rows="4">{"interactionId":"1234-1234-1234-1234","attributes": {"ID_Callback": "1234"}}</textarea>
+                <textarea id="attributePayload" rows="4">{"interactionId":"1234-1234-1234-1234","attributes": {"ID_Callback": "hola"}}</textarea>
                 <button id="addAttribute">Send Data</button>
             </div>
 
