--- a/embedded.html
+++ b/embedded.html
@@ -1,5 +1,6 @@
 <head>
     <script src="./framework.js"></script>
+    <script src="./ui.js"></script>
     <link type="text/css" rel="stylesheet" href="./style.css">
     <style>
       /* Hace que todas las textarea ocupen el ancho total */
