--- a/embedded.html
+++ b/embedded.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class='content'>
-        <h1>Widget de Prueba</h1>
+        <h1>Widget de Prueba WF</h1>
 
         <div class="actions">
             <h3>Actions</h3>
