--- a/embedded.html
+++ b/embedded.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class='content'>
-        <h1>Widget de Prueba W.F.</h1>
+        <h1>Widget de Prueba WF</h1>
 
         <div class="actions">
             <h3>Actions</h3>
@@ -51,7 +51,7 @@
             <div class="action">
                 <h4 class="actionName">Contact Search Options <span id="searchText"></span></h4>
                 <p>contactSearch allows you to define which contacts the integration returns from an external CRM when agents search for names or phone numbers before making calls or transferring interactions.</p>
-                <textarea id="contactSearchPayload" rows="4">[{"type": "external", "name": "Weather Line", "phone":[{ "number":"(317) 222-2222", "label":"Cell"}]}]</textarea>
+                <textarea id="contactSearchPayload" rows="4">[{"type": "external", "name": "Wilfredo Móvil", "phone":[{ "number":"604804440", "label":"Cell"}]}]</textarea>
             </div>
             
             <div class="action">
