--- a/embedded.html
+++ b/embedded.html
@@ -24,7 +24,7 @@
 
             <div class="action">
                 <h4 class="actionName">Click-to-Dial</h4>
-                <p>You can raise events from the main application to automatically place a call using the embedded client. <a id='clickToDial' >633854303</a> </p>
+                <p>You can raise events from the main application to automatically place a call using the embedded client. <a id='clickToDial' >+34633854303</a> </p>
             </div>
 
             <div class="action">
